--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
 </head>
 <body>
     <h1>Terms of Service</h1>
-    <p>... (ваши условия использования) ...</p>
+    <p>## Introduction
+Welcome to KuruminV2. By using this bot, you agree to comply with and be bound by the following terms and conditions.
+
+## Definitions
+- "Bot" refers to KuruminV2.
+- "User" refers to anyone who uses the bot.
+
+## User Responsibilities
+- Users must comply with all applicable laws while using the bot.
+- Users must not use the bot for any unlawful or prohibited activities.
+
+## Developer Responsibilities
+- The developer will strive to maintain the bot and keep it functional.
+- The developer reserves the right to change the bot's functionality at any time without notice.
+
+## Limitation of Liability
+The developer is not liable for any damages that may arise from the use of the bot.
+
+## Changes to Terms
+The developer reserves the right to update these terms at any time. Users will be notified of significant changes.</p>
 
     <h1>Privacy Policy</h1>
     <p>
